<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="pref_entry_value_on" translatable="false">On</string>
    <string name="hello">Hello World, ValidationToolsActivity!</string>
    <string name="app_name">ValidationTools</string>
    <string name="TestTitleString">Factory Test</string>
    <string name="TestResultTitleString">Factory Test Result</string>
    <string name="TestResultTitleStringFail">Factory Test Result(Fail)</string>
    <string name="system_test_title">System</string>
    <string name="item_test_title">Items Test</string>
    <string name="test_info_title">Test Info</string>
    <string name="recovery_stage_title">Reset</string>
    <string name="display_test_title">Screen</string>
    <string name="ring_test_title">Ring</string>
    <string name="phone_test_title">Phone</string>
    <string name="accessories_test_title">Accessories</string>
    <string name="wireless_test_title">Wireless</string>
    <string name="sensor_test_title">Sensor</string>
    <string name="camera_test_title">Camera</string>
    <string name="key_test_title">Key</string>
    <string name="full_test_title">Full Test</string>
    <string name="test_result_title">Test Result</string>
    <string name="version_test">Version test</string>
    <string name="rf_cali_test">RF CALI test</string>
    <string name="rtc_test">RTC test</string>
    <string name="lcd_test">LCD test</string>
    <string name="backlight_test">Backlight test</string>
    <string name="backlight_des">Are saw backlight and keypad light flashes twice in a row?</string>
    <string name="touchpoint_test">Single touch point test</string>
    <string name="wacom_test">Pen test</string>
    <string name="touchpoint_info">Please draw a line connecting two days on the diagonal</string>
    <string name="touchpoint_info_fail">Single-touch failed, please click the back key to retry</string>
    <string name="muti_touchpoint_test">Muti-touch point test</string>
    <string name="muti_touchpoint_info">\nMove two balls simultaneously by two touch</string>
    <string name="ctp_test">CTP test</string>
    <string name="vibrator_test">Ringtones motor test</string>
    <string name="melody_test">Melody test</string>
    <string name="melody_play_info">Whether to play and vibration?</string>
    <string name="phone_loopback_test">Phone loopback test</string>
    <string name="phone_loopback_test_notice">Please say whatever to the mic</string>
    <string name="phone_loopback_result_check">Did you hear the loopback?</string>
    <string name="wifi_result_check">Have find the device?</string>
    <string name="gps_result_check">Have find the device?</string>
    <string name="sim_test">SIM card test</string>
    <string name="device_test">Device test</string>
    <string name="phone_call_test">Phone call test</string>
    <string name="phone_call_info">Normal play and hang up the phone</string>
    <string name="sdcard_test">SD card test</string>
    <string name="no_sdcard">No SD card</string>
    <string name="charger_test">Charger test</string>
    <string name="headset_test">Headset test</string>
    <string name="fm_test">FM test</string>
    <string name="soundtrigger_test">SoundTrigger test</string>
    <string name="mobile_tv_test">Mobile test</string>
    <string name="atv_test">ATV test</string>
    <string name="wifi_test">WIFI test</string>
    <string name="bt_test">Bluetooth test</string>
    <string name="gps_test">GPS test</string>
    <string name="btut_test">BTEUT test</string>
    <string name="oritention_sensor_test">Orientation sensor test</string>
    <string name="proximity_light_sensor_test">Proximity and Light sensor test</string>
    <string name="proximity_sensor_test">Proximity sensor test</string>
    <string name="proximity_sensor_tips">Please place the machine in an unobstructed place, press the start test button, and then perform the distance sensor test</string>
    <string name="light_sensor_test">Ligth sensor test</string>
    <string name="camera_test">Camera test</string>
    <string name="key_test">Key test</string>
    <string name="key_test_info">The keys are in line with</string>
    <string name="front_camera_title_text">Front Camera Test</string>
    <string name="back_camera_title_text">Back Camera Test</string>
    <string name="camera_failue">The camera test fails!</string>
    <string name="camera_pass">The camera test passes!</string>
    <string name="take_picture">Take picture</string>
    <string name="preview">Preview</string>
    <string name="text_pass">Pass</string>
    <string name="text_fail">Fail</string>
    <string name="text_na">Not test</string>
    <string name="text_change_camera">Change Camera</string>
    <string name="text_pass_msg">PASS</string>
    <string name="test_result_ID_title">ID</string>
    <string name="test_result_case_title">Test Case</string>
    <string name="test_result_result_title">Result</string>
    <string name="back_camera_test">Back camera test</string>
    <string name="front_camera_test">Front camera test</string>
    <string name="test_case_name">Test case</string>
    <string name="test_case_result">Test result</string>
    <string name="key_test_home">Home</string>
    <string name="key_test_menu">Menu</string>
    <string name="key_test_back">Back</string>
    <string name="key_test_search">Search</string>
    <string name="key_test_camera">Camera</string>
    <string name="key_test_volume_up">Volume up</string>
    <string name="key_test_volume_down">Volume down</string>
    <string name="key_test_power">Power</string>
    <string name="key_test_finish">Finish</string>
    <string name="android_version">Android Version:</string>
    <string name="prop_version">Prop Version:</string>
    <string name="build_number">Build Number:</string>
    <string name="device_sn">Device Sn:</string>
    <string name="base_band_title">Base Band Version:</string>
    <string name="tp_version_title">TP Version:</string>
    <string name="wacom_fw_version_title">WACOM Firwmare Version:</string>
    <string name="camera_main_title">Back Camera ID:</string>
    <string name="camera_sub_title">Front Camera ID:</string>
    <string name="wifi_mac_title">Wifi Mac:</string>
    <string name="blue_mac_title">Bluetooth Mac:</string>
    <string name="product_model">Model:</string>
    <string name="phasecheck_rf_pass">Calibrat:PASS</string>
    <string name="phasecheck_rf_fail">Calibrat:FAIL</string>
    <string name="phasecheck_cft_pass">CFT:PASS</string>
    <string name="phasecheck_cft_fail">CFT:FAIL</string>
    <string name="phasecheck_antenna_pass">ANT:PASS</string>
    <string name="phasecheck_antenna_fail">ANT:FAIL</string>
    <string name="osensor_orien">"Orientation is "</string>
    <string name="osensor_info">Compass needle is rotated</string>
    <string name="sensor_show_msg">\nTilt the phone, can you see the arrow?</string>
    <string name="psensor_btn_on">On</string>
    <string name="psensor_btn_off">Off</string>
    <string name="psensor_msg_value">Value :</string>
    <string name="psensor_msg_value_far">Distant</string>
    <string name="psensor_msg_value_near">Closer</string>
    <string name="psensor_msg_status">PSensor Status :</string>
    <string name="psensor_msg_data">PROX_DATA =</string>
    <string name="lsensor_value">Lsensor value =</string>
    <string name="wifi_title_text">Wifi Test</string>
    <string name="wifi_enabled_failure">Device can not enabled</string>
    <string name="wifi_Initializing">Initializing...</string>
    <string name="wifi_scaning">Scanning...</string>
    <string name="wifi_dialog">Please wait and don\' exit!</string>
    <string name="wifi_device_ok">The wifi device is ok!</string>
    <string name="wifi_scan_failure">No wifi device found</string>
    <string name="wifi_stop_device">Stopping wifi device,please wait...</string>
    <string name="rtc_tag">System time\n</string>
    <string name="ctp_tag">Enter CTP mode, please waiting ...</string>
    <string name="btut_tag">Enter BTEUT mode, please waiting ...</string>
    <string name="bluetooth_search_title">Bluetooth Searching</string>
    <string name="start_searching">Start searching !</string>
    <string name="bluetooth_failue">The bluetooth test fails!</string>
    <string name="bluetooth_pass">The bluetooth test passes!</string>
    <string name="gps_title_text">GPS Test</string>
    <string name="gps_result_ok">The GPS test passes!</string>
    <string name="gps_result_failure">The GPS test fails!</string>
    <string name="gps_satellite_msg">The satellite count is </string>
    <string name="gps_not_enabled_msg">The GPS is not enabled</string>
    <string name="gps_show_settings">Show GPS Settings</string>
    <string name="gps_time_msg">Seconds passed</string>
    <string name="phone_call_text">Calling 112...</string>
    <string name="sim_card_test_tittle">SIM card test</string>
    <string name="sim_card_0_result">\nSIM card 1 test result</string>
    <string name="sim_card_1_result">SIM card 2 test result</string>
    <string name="sim_test_result">Test result</string>
    <string name="test_completed">Test Complete</string>
    <string name="micphone_msg">Voice cycle test</string>
    <string name="single_sim_card_test">Single SIM card test</string>
    <string name="multiple_sim_card_test">Multi SIM card test</string>
    <string name="vibrator_test_tag">Touch screen to vibrator</string>
    <string name="sdcard_test_tag">Testing sdcard</string>
    <string name="sdcard_test_write">Writing file...</string>
    <string name="sdcard_test_read">Reading file...</string>
    <string name="sdcard_test_result_success">Internal card read and write success</string>
    <string name="sdcard_test_result_fail">Internal card read and write fail</string>
    <string name="status">Status:</string>
    <string name="plugged">Plugged:</string>
    <string name="battery_title_text">Charger Test</string>
    <string name="headset_plugged">Plugged,you can test headset hook if has.</string>
    <string name="headset_unplugged">Unplugged</string>
    <string name="headset_notice">Please test by step</string>
    <string name="please_plugin">First ,please plugin your headset</string>
    <string name="please_press_answer_key">Second ,please press your headset answer key</string>
    <string name="start_light_calibration">Start calibration</string>
    <string name="light_sensor_calibration_tips">Please place the mobile phone horizontally under 400lux,click the button to start calibration</string>
    <string name="statr_test">Start testing</string>
    <string name="start_checkout">Start Checkout</string>
    <string name="prox_calibration_button_auto">Auto Calibration</string>
    <string name="prox_calibration_button_manual">Start Calibration</string>
    <string name="prox_sensor_calibration">Prox Sensor Calibration</string>
    <string name="retest">retest</string>
    <string name="auto_retest">auto retest</string>
    <string name="manual_retest">retest</string>
    <string name="select_sound">Please keep quiet environment, choose to hear the bell</string>
    <string name="female112">112 girl</string>
    <string name="male112">112 boy</string>
    <string name="play_left">左喇叭播放</string>
    <string name="play_right">右喇叭播放</string>
    <string name="stop_left">左喇叭停止</string>
    <string name="stop_right">右喇叭停止</string>
    <string name="lcd_test_tips">Click screen for test!</string>
    <string name="physical_keyboard_test_tip1">Dont find any keyboard:</string>
    <string name="physical_keyboard_test_space">Space</string>
    <string name="physical_keyboard_test_number1">1</string>
    <string name="physical_keyboard_test_number2">6</string>
    <string name="physical_keyboard_test_number3">0</string>
    <string name="physical_keyboard_test_charater1">A</string>
    <string name="physical_keyboard_test_charater2">H</string>
    <string name="tp_rawdata_info">TP rawdata test</string>
</resources>